# vsl

./: CMakeLists.txt  package.xml  readme.md
config/: config.rviz
examples/: curvature_simplePath.txt  normal_simplePath.txt  simplePath.txt  simplePath_singleline.txt  tangent_simplePath.txt
include/: cartesian_publisher.h  course_display_topic.h  ee_request_publisher.h  ee_velocity_publisher.h  joint_request_publisher.h  ompl_vsl_planner.h  pose_builder.h  pose_builder_server.h  vsl_application.h  vsl_planner.h
kr210_no_eef_cell_ikfast_manipulator_plugin/: CMakeLists.txt  kr210_no_eef_cell_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
kr210_no_eef_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kukakr210r2700extra_descartes/: CMakeLists.txt  kukakr210r2700extra_descartes_plugins.xml  package.xml
kukakr210r2700extra_descartes/include/: kuka_moveit_plugin.h  kukakr210r2700extra_robot_model.h
kukakr210r2700extra_descartes/src/: kukakr210r2700extra_robot_model.cpp  plugin_init.cpp
kukakr210r2700extra_ikfast/: CMakeLists.txt  kukakr210r2700extra_descartes_plugins.xml  package.xml
launch/: ompl_vsl_planner.launch  urdf.launch  vsl_planner.launch  vsl_robot_setup.launch  vsl_setup.launch
pictures/: vsl_launch_files.drawio  vsl_planner_descartes_flow_chart.drawio
src/: cartesian_publisher.cpp  course_display.cpp  ee_request_publisher.cpp  ee_velocity_publisher.cpp  joint_request_publisher.cpp  main.cpp  moveit_setup.cpp  ompl_vsl_planner.cpp  pose_builder.cpp  (+4 more)
vsl_motion_planner/: package.xml
(+86 files in other folders)
