<?xml version="1.0"?>
<package>
  <name>vsl_motion_planner</name>
  <version>0.0.1</version>
  <description> Collection of ROS packages for vsl_motion_planner </description>

  <maintainer email="a.m.mendesflorindo@student.tudelft.nl">Andre Florindo</maintainer>

  <license>TU Delft</license>
 

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  	<metapackage/>
  </export>
</package>